Fix nav on safari

--- a/src/css/components/_nav.scss
+++ b/src/css/components/_nav.scss
@@ -32,7 +32,8 @@
 }
 
 .header__nav {
-	
+	width:100%;
+	text-align: right;
 }
 
 .header__nav a {
